<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityEventEdit">

    <ImageView
        android:id="@+id/background_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_default"
        android:contentDescription="@string/todo"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:inputType="text"
        android:autofillHints=" "
        android:ems="12"
        android:hint="@string/event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_main" />

    <EditText
        android:id="@+id/edit_event_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:autofillHints=" "
        android:ems="12"
        android:hint="@string/event_type"
        app:layout_constraintEnd_toEndOf="@+id/edit_event_name"
        app:layout_constraintStart_toStartOf="@+id/edit_event_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_name" />

    <EditText
        android:id="@+id/edit_event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="date"
        android:autofillHints=" "
        android:ems="12"
        android:hint="@string/event_date"
        app:layout_constraintEnd_toEndOf="@+id/edit_event_type"
        app:layout_constraintStart_toStartOf="@+id/edit_event_type"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_type" />

    <EditText
        android:id="@+id/edit_event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:autofillHints=" "
        android:ems="12"
        android:hint="@string/event_location"
        app:layout_constraintEnd_toEndOf="@+id/edit_event_date"
        app:layout_constraintStart_toStartOf="@+id/edit_event_date"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_date" />

    <ImageButton
        android:id="@+id/event_reset"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/reset"
        android:padding="1dp"
        android:scaleType="centerInside"
        android:src="@drawable/button_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_location" />

    <ImageButton
        android:id="@+id/event_update"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/todo"
        android:padding="2dp"
        android:scaleType="centerInside"
        android:src="@drawable/button_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_location" />

    <ImageButton
        android:id="@+id/event_add_clothe"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/todo"
        android:padding="2dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_update"
        app:srcCompat="@drawable/button_add_default" />

    <TextView
        android:id="@+id/event_text_add_clothe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/add_clothe"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/event_add_clothe"
        app:layout_constraintStart_toStartOf="@+id/event_add_clothe"
        app:layout_constraintTop_toBottomOf="@+id/event_add_clothe" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEditEvents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_text_add_clothe" />

</androidx.constraintlayout.widget.ConstraintLayout>