<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        tools:layout_editor_absoluteX="63dp">

        <ImageView
            android:id="@+id/clothe_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.485" />

        <TextView
            android:id="@+id/text_purchase_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/purchase_date"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/text_price"
            app:layout_constraintTop_toBottomOf="@+id/text_pattern" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginBottom="16dp"
            android:text="@string/price"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clothe_image"
            app:layout_constraintTop_toBottomOf="@+id/text_purchase_date" />

        <TextView
            android:id="@+id/text_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/pattern"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/text_purchase_date"
            app:layout_constraintTop_toBottomOf="@+id/text_colour" />

        <TextView
            android:id="@+id/text_colour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/colour"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/text_pattern"
            app:layout_constraintTop_toBottomOf="@+id/text_type" />

        <TextView
            android:id="@+id/text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/text_colour"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/text_type"
            app:layout_constraintStart_toEndOf="@+id/text_type"
            app:layout_constraintTop_toTopOf="@+id/text_type" />

        <TextView
            android:id="@+id/text_colour_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/text_colour"
            app:layout_constraintStart_toEndOf="@+id/text_colour"
            app:layout_constraintTop_toTopOf="@+id/text_colour" />

        <TextView
            android:id="@+id/text_pattern_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/text_pattern"
            app:layout_constraintStart_toEndOf="@+id/text_pattern"
            app:layout_constraintTop_toTopOf="@+id/text_pattern" />

        <TextView
            android:id="@+id/text_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/text_price"
            app:layout_constraintStart_toEndOf="@+id/text_price"
            app:layout_constraintTop_toTopOf="@+id/text_price" />

        <TextView
            android:id="@+id/text_purchase_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/text_purchase_date"
            app:layout_constraintStart_toEndOf="@+id/text_purchase_date"
            app:layout_constraintTop_toTopOf="@+id/text_purchase_date" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>