<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/drawer_image"
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:layout_marginTop="11dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon_drawer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_drawer_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="8dp"
            android:text="@string/drawer_number"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/drawer_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_drawer_number_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="60dp"
            android:text=""
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/drawer_image" />

        <TextView
            android:id="@+id/text_drawer_clothes_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:text="@string/clothes_number"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/drawer_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_drawer_clothes_number_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="60dp"
            android:text=""
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/drawer_image" />

        <ImageButton
            android:id="@+id/button_open_drawer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/todo"
            android:padding="2dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_default_clothe" />

        <ImageButton
            android:id="@+id/button_remove_drawer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/todo"
            android:padding="2dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/button_open_drawer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_open_drawer"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/button_remove_default" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>